Fixed KTS-1427: Portlets dont work on IE 6.0.2900
git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@6037 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -264,12 +264,12 @@ a.main_nav_item {
     font-size: small;
 }
 
-#portletbar .portlet.expanded .portletbody {
-    display: block;
-}
-
 #portletbar .portlet .portletbody {
     display: none;
+}
+
+#portletbar .expanded .portletbody {
+    display: block;
 }
 
 #portletbar .portlet .actionlist
